# Trabalho-CPP

./: Anais.cpp  Anais.h  Artjr.cpp  Artjr.h  Artpe.cpp  Artpe.h  CMakeLists.txt  Instituicao.cpp  Instituicao.h  LeitorCsv.cpp  LeitorCsv.h  Livro.cpp  Livro.h  NumberUtils.cpp  Outro.cpp  Outro.h  PPG.cpp  PPG.h  Partmu.cpp  Partmu.h  Processador.cpp  Processador.h  Producao.cpp  Producao.h  README.md  Tradu.cpp  Tradu.h  main.cpp
